--- a/views/logar.hbs
+++ b/views/logar.hbs
@@ -13,7 +13,7 @@
                 <label for="senha" class="block text-white">Senha</label>
                 <input type="text" id="password" class="w-64 px-3 py-1 border rounded-md bg-white text-black"><br>
             </div>
-            <a href="" class="border-b">Não possui cadastro?</a>
+            <a href="/registrar" class="border-b">Não possui cadastro?</a>
         </div>
         <button type="button" class="bg-colorbutton text-white font-bold py-1 px-4 rounded shadow-inner shadow-md" id="logar">LOGAR</button>
     </form>
