--- a/views/main.hbs
+++ b/views/main.hbs
@@ -16,7 +16,7 @@
             <a href="/Cadastrar" class="hover:underline mx-3">Cadastrar</a>
             <a href="/Listar" class="hover:underline mx-3">Listar</a>
             <a href="/QuemSomos" class="hover:underline mx-3">Quem Somos</a>
-            <a href="/Deslogar" class="hover:underline mx-3">Deslogar</a>
+            <a href="/Deslogar" class="hover:underline mx-3" disabled id="deslogar">Deslogar</a>
         </nav>
     </header>
 
