--- a/views/layout.hbs
+++ b/views/layout.hbs
@@ -5,6 +5,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link href="/stylesheets/output.css" rel="stylesheet">
+  <script type="module" src="/javascripts/deslogar.js"></script>
   <title>Document</title>
 </head>
 
@@ -16,7 +17,8 @@
       <a href="/Cadastrar" class="hover:underline mx-3">Cadastrar</a>
       <a href="/Listar" class="hover:underline mx-3">Listar</a>
       <a href="/QuemSomos" class="hover:underline mx-3">Quem Somos</a>
-      <a href="/Deslogar" class="hover:underline mx-3">Deslogar</a>
+      <a href="/tempo" class="hover:underline mx-3">Tempo</a>
+      <span href="" class="hover:underline mx-3" disabled id="deslogar">Deslogar</span>
     </nav>
   </header>
 
